# xemu-perf-tests

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/scripts/: summarize_test_suites.py
.github/workflows/: build.yml
cmake/modules/: FindNXDK_SDL2.cmake  FindNXDK_SDL2_Image.cmake  FindNXDK_SDL2_Test.cmake  FindNXDK_SDL_TTF.cmake  NV2A_VSH.cmake  PrebuildNXDK.cmake  XBEUtils.cmake
docs/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d93a1d4020dea85bb71b237545b5e722.html  dir_d93a1d4020dea85bb71b237545b5e722.js  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_7.md5  inherits.html  navtreedata.js  navtreeindex0.js
docs/d0/d0e/: structMenuItemOption.html
docs/d0/d20/: classPrimitiveTypeTests__inherit__graph.map  classPrimitiveTypeTests__inherit__graph.md5
docs/d0/d98/: classRuntimeConfig.html
docs/d1/d39/: classJSONParser-members.html
docs/d1/d48/: classBusyPfifoTests.html  classBusyPfifoTests.js
docs/d1/d77/: structMenuItemOption-members.html
docs/d1/d8c/: logger_8h_source.html
docs/d1/d96/: classTestHost__coll__graph.map
docs/d1/dc1/: classUniformThrashTests.html  classUniformThrashTests.js
docs/d1/dc6/: structTestHost_1_1ProfileResults.html
docs/d2/d3e/: classTestSuite.html  classTestSuite.js
docs/d2/d5b/: classJSONParser.html
docs/d2/db2/: tiny__draw__tests_8h_source.html
docs/d3/d55/: primitive__type__tests_8h_source.html
docs/d3/d5d/: menu__item_8h_source.html
docs/d3/d67/: classTestHost__inherit__graph.md5
docs/d3/d80/: classVertexBufferAllocationTests__coll__graph.map  classVertexBufferAllocationTests__coll__graph.md5
docs/d3/d92/: classHighVertexCountTests.html  classHighVertexCountTests.js
docs/d3/dc0/: debug__output_8h_source.html
docs/d3/dd2/: busy__pfifo__tests_8h_source.html
docs/d3/de7/: classTestHost-members.html
docs/d4/d3c/: runtime__config_8h_source.html
docs/d4/d54/: classLogger-members.html
docs/d5/d16/: structMenuItemSuite-members.html
docs/d5/d49/: classTestSuite-members.html
docs/d5/d5d/: classTestSuite__coll__graph.map  classTestSuite__coll__graph.md5
docs/d6/d3c/: classFillRateTests.html  classFillRateTests.js
docs/d6/d5d/: classSurfaceRenderingTests-members.html
docs/d6/d7a/: test__suite_8h_source.html
docs/d6/d80/: classTestHost.html  classTestHost.js
docs/d7/d0a/: classHighVertexCountTests-members.html
docs/d7/d12/: structMenuItem.html
docs/d7/d54/: vertex__buffer__allocation__tests_8h_source.html
docs/d7/d64/: structMenuItemRoot.html
docs/d7/d74/: classBusyPfifoTests-members.html
docs/d7/d82/: structMenuItemOptions-members.html
docs/d7/da6/: classSurfaceRenderingTests__coll__graph.map  classSurfaceRenderingTests__coll__graph.md5
docs/d7/dd5/: classPrimitiveTypeTests-members.html
docs/d8/d0e/: structMenuItemTest.html
docs/d8/d40/: high__vertex__count__tests_8h_source.html
docs/d8/dbc/: classBusyPfifoTests__coll__graph.map  classBusyPfifoTests__coll__graph.md5
docs/d8/dc4/: classUniformThrashTests__inherit__graph.map  classUniformThrashTests__inherit__graph.md5
docs/d9/d00/: structMenuItemCallable.html
docs/d9/d3f/: classUniformThrashTests__coll__graph.map  classUniformThrashTests__coll__graph.md5
docs/d9/d64/: classFillRateTests__coll__graph.map  classFillRateTests__coll__graph.md5
docs/d9/de9/: classSurfaceRenderingTests__inherit__graph.map  classSurfaceRenderingTests__inherit__graph.md5
docs/da/d85/: structTestSuite_1_1Config.html
docs/da/dc4/: classTestSuite__inherit__graph.map  classTestSuite__inherit__graph.md5
docs/da/dd4/: classTinyDrawTests.html  classTinyDrawTests.js
docs/da/de8/: classVertexBufferAllocationTests.html  classVertexBufferAllocationTests.js
docs/db/d67/: classLogger.html
docs/db/d9c/: classTinyDrawTests-members.html
docs/db/deb/: classHighVertexCountTests__coll__graph.map  classHighVertexCountTests__coll__graph.md5
docs/db/dee/: classVertexBufferAllocationTests-members.html
docs/db/dfe/: classPrimitiveTypeTests__coll__graph.map  classPrimitiveTypeTests__coll__graph.md5
docs/dc/d26/: structMenuItemRoot-members.html
docs/dc/d27/: classSurfaceRenderingTests.html  classSurfaceRenderingTests.js
docs/dc/d4d/: classBusyPfifoTests__inherit__graph.map  classBusyPfifoTests__inherit__graph.md5
docs/dc/d51/: structMenuItemCallable-members.html
docs/dc/d52/: structMenuItemOptions.html
docs/dc/d81/: structMenuItem-members.html
docs/dc/deb/: classTestDriver-members.html
docs/search/: all_1.js  all_10.js  all_2.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js
resources/: sample-config.json
src/: CMakeLists.txt  configure.h.in  debug_output.h  logger.h  main.cpp  menu_item.cpp  menu_item.h  runtime_config.cpp  runtime_config.h  test_driver.cpp  test_driver.h  test_host.cpp  test_host.h
src/shaders/: diffuse_from_uniform.vsh
src/tests/: busy_pfifo_tests.cpp  busy_pfifo_tests.h  fill_rate_tests.cpp  fill_rate_tests.h  high_vertex_count_tests.cpp  high_vertex_count_tests.h  primitive_type_tests.cpp  primitive_type_tests.h  surface_rendering_tests.cpp  surface_rendering_tests.h  test_suite.cpp  test_suite.h  tiny_draw_tests.cpp  tiny_draw_tests.h  uniform_thrash_tests.cpp  uniform_thrash_tests.h  vertex_buffer_allocation_tests.cpp  vertex_buffer_allocation_tests.h
utils/: create_test_suite.py
utils/templates/: test_suite.cpp.j2  test_suite.h.j2
xml/: Doxyfile.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d93a1d4020dea85bb71b237545b5e722.xml  index.xml  tests_registry.json
(+78 files in other folders)
